# perlin-experiment-2

./: Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  webpack.config.js
js/: index.html  index.js
src/: app.rs  canvas.rs  lib.rs  proxy.rs  utils.rs
styles/: main.css
