[package]
name = "perlin-experiment-2"
description = "Another attempt in using Perlin noise."
version = "1.0.0"
authors = ["minagawa <minag@tokyo800.jp>"]
categories = ["wasm"]
repository = "https://github.com/minagawah/perlin-experiment-2.git"
license = "Unlicense or MIT"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = { version = "1.5", features = ["attributes"] }
callback-future = "0.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
console_log = "^0.2"
futures = "0.3.23"
hex = "0.4.3"
js-sys = "0.3.58"
noise = "0.7.0"
num = "0.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tokio = { version = "1.14", features = ["sync"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
wasm-timer = "0.2.5"

[dependencies.rand]
version = "0.7.3"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.61"
features = [
  'console',
  # 'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'Document',
  'DomRect',
  'Element',
  'Headers',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  # 'Request',
  # 'RequestInit',
  # 'RequestMode',
  # 'Response',
  # 'TextMetrics',
  'Window',
]

# The `console_error_panic_hook` crate provides better debugging
# of panics by logging them with `console.error`. This is great
# for development, but requires all the `std::fmt` and `std::panicking`
# infrastructure, so it's only enabled in debug mode.
#
# warning: Found `debug_assertions` in `target.'cfg(...)'.dependencies`. This value is not supported for selecting dependencies and will not work as expected. To learn more visit https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes
# compiling slower, so it's only enabled in release mode.
lto = true
